--- a/EventSpace/detail.html
+++ b/EventSpace/detail.html
@@ -36,7 +36,6 @@
             <li class="active"><a href="properties.html">Properties</a></li>
             <li><a href="events.html">Venues</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="profile.html">Profile</a></li>
             <li><a href="add.html">Add Listing</a></li>
           </ul>
           <div class="extra-text visible-xs">
@@ -333,6 +332,7 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
+  <script src="js/detail.js"></script>
   <script src="js/scripts.min.js"></script>
   <script src="js/main.min.js"></script>
   <script src="js/custom.js"></script>
